<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="40sp"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/hours_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/hour9"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/id_txt"
                app:layout_constraintTop_toTopOf="@+id/id_txt" />

            <TextView
                android:id="@+id/two_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/two_dots"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/hours_txt"
                app:layout_constraintTop_toTopOf="@+id/hours_txt" />

            <TextView
                android:id="@+id/minutes_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/minutes30"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/two_dots"
                app:layout_constraintTop_toTopOf="@+id/two_dots" />

            <TextView
                android:id="@+id/weekdays_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeatableM"
                app:layout_constraintStart_toStartOf="@+id/minutes_txt"
                app:layout_constraintTop_toBottomOf="@+id/minutes_txt" />

            <TextView
                android:id="@+id/disables_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disableT"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>